# Change log

Date          Version   Comment
2016/01/06    0.1.0     Support splitting Word files into chapters using Heading 1 style as delimiter.
2015/12/22    0.0.2     Initial working version