@@ -18,15 +18,12 @@
  * Import EPUB library.
  *
  * @package    booktool_wordimport
- * @copyright  2015 Eoin Campbell
+ * @copyright  2016 Eoin Campbell
  * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
 
-/* This file contains code based on mod/book/tool/importhtml/locallib.php
- * (copyright 2011 Petr Skoda) from Moodle 2.4. */
-
 defined('MOODLE_INTERNAL') || die;
-define('DEBUG_WORDIMPORT', DEBUG_DEVELOPER);
+define('DEBUG_WORDIMPORT', 0);
 
 require_once(dirname(__FILE__).'/lib.php');
 require_once(dirname(__FILE__).'/xslemulatexslt.inc');
@@ -65,8 +62,6 @@ function booktool_wordimport_import_word($wordfilename, $book, $context, $splito
 
     // Create a temporary Zip file to store the HTML and images for feeding to import function.
     $zipfilename = dirname($wordfilename) . DIRECTORY_SEPARATOR . basename($wordfilename, ".tmp") . ".zip";
-    debugging(__FUNCTION__ . ":" . __LINE__ . ": HTML Zip file: {$zipfilename}, Word file: {$wordfilename}", DEBUG_WORDIMPORT);
-
     $zipfile = new ZipArchive;
     if (!($zipfile->open($zipfilename, ZipArchive::CREATE))) {
         // Cannot open zip file.
@@ -81,24 +76,18 @@ function booktool_wordimport_import_word($wordfilename, $book, $context, $splito
     }
 
     $htmfilename = dirname($wordfilename) . DIRECTORY_SEPARATOR . basename($wordfilename, ".tmp") . ".htm";
-    file_put_contents($htmfilename, $htmlcontent);
     // Split the single HTML file into multiple chapters based on h1 elements.
     $h1matches = null;
     $sectionmatches = null;
     // Grab title and contents of each section.
     $sectionmatches = preg_split('#<h1>.*</h1>#isU', $htmlcontent);
     preg_match_all('#<h1>(.*)</h1>#i', $htmlcontent, $h1matches);
-    debugging(__FUNCTION__ . ":" . __LINE__ . ": nchaptitles = " . count($h1matches[0]) .
-        ", n sectionmatches = " . count($sectionmatches), DEBUG_WORDIMPORT);
 
     // Create a separate HTML file in the Zip file for each section of content.
     for ($i = 1; $i < count($sectionmatches); $i++) {
         $sectiontitle = $h1matches[1][$i - 1];
         $sectioncontent = $sectionmatches[$i];
-        $chapfilename = sprintf("index%04d.htm", $i);
-        debugging(__FUNCTION__ . ":" . __LINE__ . ": sectiontitle: " . $sectiontitle, DEBUG_WORDIMPORT);
-        debugging(__FUNCTION__ . ":" . __LINE__ . ": sectioncontent[{$i}]: " .
-            str_replace("\n", "", $sectioncontent), DEBUG_WORDIMPORT);
+        $chapfilename = sprintf("index%02d.htm", $i);
 
         // Remove the closing HTML markup from the last section.
         if ($i == (count($sectionmatches) - 1)) {
@@ -113,38 +102,28 @@ function booktool_wordimport_import_word($wordfilename, $book, $context, $splito
             preg_match_all('#<h2>(.*)</h2>#i', $sectioncontent, $h2matches);
             $subsectionmatches = preg_split('#<h2>.*</h2>#isU', $sectioncontent);
             $nsubtitles = count($h2matches[0]);
-            debugging(__FUNCTION__ . ":" . __LINE__ . ": nsubtitles = {$nsubtitles}, n subsectionmatches = " . count($subsectionmatches), DEBUG_WORDIMPORT);
 
             // First save the initial chapter content.
             $sectioncontent = $subsectionmatches[0];
-        $chapfilename = sprintf("index%04d_0000.htm", $i);
-            debugging(__FUNCTION__ . ":" . __LINE__ . ": sectioncontent({$chapfilename}): " .
-                str_replace("\n", "", $sectioncontent), DEBUG_WORDIMPORT);
+            $chapfilename = sprintf("index%02d_00.htm", $i);
             $htmlfilecontent = "<html><head><title>{$sectiontitle}</title></head>" .
                 "<body>{$sectioncontent}</body></html>";
             $zipfile->addFromString($chapfilename, $htmlfilecontent);
-            file_put_contents(dirname($wordfilename) . DIRECTORY_SEPARATOR . $chapfilename, $htmlfilecontent);
 
             // Save each subsection to a separate file.
             for ($j = 1; $j < count($subsectionmatches); $j++) {
                 $subsectiontitle = $h2matches[1][$j - 1];
                 $subsectioncontent = $subsectionmatches[$j];
-                $subsectionfilename = sprintf("index%04d_%04d_sub.htm", $i, $j);
+                $subsectionfilename = sprintf("index%02d_%02d_sub.htm", $i, $j);
                 $htmlfilecontent = "<html><head><title>{$subsectiontitle}</title></head>" .
                     "<body>{$subsectioncontent}</body></html>";
-                debugging(__FUNCTION__ . ":" . __LINE__ . ": subsectiontitle: " . $subsectiontitle, DEBUG_WORDIMPORT);
-                debugging(__FUNCTION__ . ":" . __LINE__ . ": subsectioncontent[{$j}]({$subsectionfilename}): " .
-                    str_replace("\n", "", $subsectioncontent), DEBUG_WORDIMPORT);
-
                 $zipfile->addFromString($subsectionfilename, $htmlfilecontent);
-                file_put_contents(dirname($wordfilename) . DIRECTORY_SEPARATOR . $subsectionfilename, $htmlfilecontent);
             }
         } else {
             // Save each section as a HTML file.
             $htmlfilecontent = "<html><head><title>{$sectiontitle}</title></head>" .
                 "<body>{$sectioncontent}</body></html>";
             $zipfile->addFromString($chapfilename, $htmlfilecontent);
-            file_put_contents(dirname($wordfilename) . DIRECTORY_SEPARATOR . $chapfilename, $htmlfilecontent);
         }
     }
     $zipfile->close();
